--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     background-color: #E4F2E7;
     border: none;
 }
-.display{
+.data{
     grid-column: span 4;
     height: 70px;
     /* width: 260px; */
@@ -45,7 +45,11 @@ button{
 
 }
 .equal{
-    grid-column: span 2;
+    /* grid-column: span 12; */
+    position: relative;
+    display: block;
     width:110px;
     border-radius: 40px;
+    text-align: center;
+    margin: auto;
 }
